(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license MIT)

(authors
    "Victoria Lutsyuk <victorialutsyuk.t@gmail.com>"
    "Anastasia Migunova <anastasiamigunova76@gmail.com>")

(maintainers
    "Anastasia Migunova <anastasiamigunova76@gmail.com>"
    "Victoria Lutsyuk <victorialutsyuk.t@gmail.com>")

(bug_reports "https://github.com/vicitori/scheme-interpreter")

(homepage "https://github.com/vicitori/scheme-interpreter")

(package
 (name SchemeDelimCC)
 (synopsis "An interpreter for Scheme")
 (description
  "An interpreter of a subset of the Scheme language that supports delimeted continuation (WIP)")
 (documentation "https://kakadu.github.io/fp2024/docs/SchemeDelimCC")
 (version 0.1)
 (depends
  dune
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)
  ))
